Fix spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,10 @@ svg {
   margin-bottom: 10px;
 }
 
+.container-fluid {
+  padding-left: 75px;
+}
+
 .nav {
   position: fixed;
   width: 100px;
@@ -179,6 +183,7 @@ footer {
 @media(max-width: 576px) {
   .container-fluid {
     width: 100%;
+    padding-left: 15px;
   }
 
   .nav {
@@ -194,7 +199,7 @@ footer {
   }
 
   .home h1 {
-    margin-top: 50px;
+    margin-top: 50%;
     margin-left: 0;
     text-align: center;
   }
